コメント機能を追加

--- a/css/common.css
+++ b/css/common.css
@@ -543,6 +543,33 @@ li.widget_recent_entries .post-date::after {
   text-align: center;
 }
 
+/* comments */
+/*--------------------------------------------------*/
+
+ul#comments-list {}
+ul#comments-list li {
+  border: 1px solid #CCC;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
